--- a/template.net8.api/appsettings.local_template.json
+++ b/template.net8.api/appsettings.local_template.json
@@ -2,7 +2,7 @@
   "AllowedHosts": "localhost",
   "Connections": {
     "ProjectDb": {
-      "ConnectionString": ""
+      "ConnectionString": "midbconnectionstring"
     }
   },
   "Swagger": {
