Update template.net8 with better authentication error controls

--- a/template.net8.api/template.net8.api.csproj
+++ b/template.net8.api/template.net8.api.csproj
@@ -84,4 +84,10 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Localize\Resources\ResourceDictionaryErrorCode.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
