Added gitignore backup files

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ template.net8.api/appsettings.test.json
 # File log misconfigured
 template.net8.api/\#{HOST_API_LOG_INTERNAL_FILE}\#
 
+# Project Backup Files
+*Backup*.csproj
+
 # User-specific files
 *.rsuser
 *.suo
