Removed NLog, added Serilog and OpenTelemetry

--- a/template.net8.api/appsettings.pre.json
+++ b/template.net8.api/appsettings.pre.json
@@ -5,6 +5,12 @@
       "ConnectionString": "#{PROJECT_DB_CONNECTION}#"
     }
   },
+  "OpenTelemetry": {
+    "LogEndpointApiKeyHeader": "#{LOG_ENDPOINT_API_KEY_HEADER}#",
+    "LogEndpointApiKeyValue": "#{LOG_ENDPOINT_API_KEY_VALUE}#",
+    "LogEndpointUrl": "#{LOG_ENDPOINT_URL}#",
+    "LogFallbackFilePath": "#{LOG_FALLBACK_FILE_PATH}#"
+  },
   "Swagger": {
     "ServerUrl": "#{HOST_API_URL}#"
   }
