--- a/template.net8.api/template.net8.api.csproj
+++ b/template.net8.api/template.net8.api.csproj
@@ -59,12 +59,15 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
     <PackageReference Include="AutoMapper.Extensions.ExpressionMapping" Version="8.0.0" />
     <PackageReference Include="Delta.EF" Version="6.4.0" />
+    <PackageReference Include="EntityFrameworkCore.Exceptions.PostgreSQL" Version="8.1.3" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="HotChocolate.AspNetCore" Version="15.1.3" />
     <PackageReference Include="HotChocolate.Data.EntityFramework" Version="15.1.3" />
     <PackageReference Include="HotChocolate.Data.Spatial" Version="15.1.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+    <PackageReference Include="Linq.Expression.Optimizer" Version="1.0.29" />
+    <PackageReference Include="LinqKit" Version="1.3.8" />
     <PackageReference Include="MediatR" Version="12.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.14" />
