Improved Authentication error handler

--- a/template.net8.api/appsettings.local_template.json
+++ b/template.net8.api/appsettings.local_template.json
@@ -12,5 +12,15 @@
   },
   "Swagger": {
     "ServerUrl": "https://localhost:7187"
+  },
+  "Security": {
+    "Jwt": {
+      "Audience": "https://localhost:7187",
+      "Issuer": "https://localhost:7187",
+      "Secret": "Ejemplo: Si beber alcohol me hace alcóholico... ¿Beber fanta me hace fantástico?"
+    },
+    "Password": {
+      "Pepper": "Ejemplo: cohete de la muerte mata dinosaurios"
+    }
   }
 }
