--- a/template.net8.api/appsettings.json
+++ b/template.net8.api/appsettings.json
@@ -1,7 +1,9 @@
 {
   "Api": {
-    "CorsPolicy": "{PROJECT_NAMESPACE}Policy",
     "Name": "{PROJECT_NAMESPACE}"
+  },
+  "Cors": {
+    "CorsPolicy": "{PROJECT_NAMESPACE}Policy"
   },
   "Logging": {
     "LogLevel": {
