--- a/template.net8.api/appsettings.local_template.json
+++ b/template.net8.api/appsettings.local_template.json
@@ -1,17 +1,22 @@
 {
   "AllowedHosts": "localhost",
+  "Api": {
+    "Address": "localhost"
+  },
   "Connections": {
     "ProjectDb": {
       "ConnectionString": "midbconnectionstring"
     }
   },
-  "OpenTelemetry": {
-    "LogEndpointApiKeyHeader": "#{OPEN_TELEMETRY_ENDPOINT_LOG_API_KEY_HEADER}#",
-    "LogEndpointApiKeyValue": "#{OPEN_TELEMETRY_ENDPOINT_LOG_API_KEY_VALUE}#",
-    "LogEndpointUrl": "#{OPEN_TELEMETRY_ENDPOINT_LOG_URL}#"
+  "Cors": {
+    "AllowedOrigins": "http://localhost:8080;https://localhost:8080;http://localhost:8081;https://localhost:8081"
   },
-  "Swagger": {
-    "ServerUrl": "https://localhost:7187"
+  "OpenTelemetry": {
+    "IsMetricActive": true,
+    "IsTraceActive": true,
+    "LogEndpointUrl": "http://localhost:5341/ingest/otlp/v1/logs",
+    "MetricEndpointUrl": "http://localhost:5341/ingest/otlp/v1/metrics",
+    "TraceEndpointUrl": "http://localhost:5341/ingest/otlp/v1/traces"
   },
   "Security": {
     "Jwt": {
@@ -22,5 +27,8 @@
     "Password": {
       "Pepper": "Ejemplo: cohete de la muerte mata dinosaurios"
     }
+  },
+  "Swagger": {
+    "ServerUrl": "https://localhost:7187"
   }
 }
