--- a/template.net8.api/appsettings.local_template.json
+++ b/template.net8.api/appsettings.local_template.json
@@ -12,8 +12,9 @@
     "AllowedOrigins": "http://localhost:8080;https://localhost:8080;http://localhost:8081;https://localhost:8081"
   },
   "OpenTelemetry": {
-    "IsMetricActive": true,
-    "IsTraceActive": true,
+    "IsLogActive": true,
+    "IsMetricActive": false,
+    "IsTraceActive": false,
     "LogEndpointUrl": "http://localhost:5341/ingest/otlp/v1/logs",
     "MetricEndpointUrl": "http://localhost:5341/ingest/otlp/v1/metrics",
     "TraceEndpointUrl": "http://localhost:5341/ingest/otlp/v1/traces"
