--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,16 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
-# SonarCube Script
-*sonar*.*
+# SonarQube
+*sonar.ps1
+.sonar
+.scannerwork
 
-# SonarCube
-.sonarqube/
-.sonar/
-.scannerwork/
+#Trivy
+.trivy
+*trivy.ps1
+trivy-reports
+trivy-temp-download
 
 # Package.json
 template.net8.api/package.json
