--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "deploy-patch": "npm version patch -m v%s",
     "install-dotnet": "dotnet restore /p:PublishReadyToRun=true",
     "postversion": "git push origin && git push origin --tags",
-    "preversion": "npm run sonar",
-    "sonar": "powershell -File ./sonar.ps1",
+    "preversion": "npm run sonar && npm run trivy",
+    "sonar": "powershell -ExecutionPolicy Bypass -File ./sonarqube-dotnet.ps1",
+    "sonar:legacy": "powershell -ExecutionPolicy Bypass -File ./sonar.ps1",
+    "trivy": "npm run install-dotnet && powershell -ExecutionPolicy Bypass -File ./trivy.ps1",
     "version": "git add -A"
   },
   "version": "0.0.0"
