--- a/template.net8.api/appsettings.prod.json
+++ b/template.net8.api/appsettings.prod.json
@@ -12,6 +12,7 @@
     "AllowedOrigins": "#{HOST_API_CORS_ALLOWED_ORIGINS}#"
   },
   "OpenTelemetry": {
+    "IsLogActive": true,
     "IsMetricActive": false,
     "IsTraceActive": false,
     "LogEndpointApiKeyHeader": "#{OPEN_TELEMETRY_ENDPOINT_LOG_API_KEY_HEADER}#",
