added opentelemetry service name config to appsettings

--- a/template.net8.api/appsettings.local_template.json
+++ b/template.net8.api/appsettings.local_template.json
@@ -17,6 +17,7 @@
     "IsTraceActive": false,
     "LogEndpointUrl": "http://localhost:5341/ingest/otlp/v1/logs",
     "MetricEndpointUrl": "http://localhost:5341/ingest/otlp/v1/metrics",
+    "ServiceName": "{PROJECT_NAMESPACE}",
     "TraceEndpointUrl": "http://localhost:5341/ingest/otlp/v1/traces"
   },
   "Security": {
